--- a/indexfirst.html
+++ b/indexfirst.html
@@ -10,7 +10,7 @@
 	<ul class="nav nav-tabs">
 		<li role="presentation" class="active"><a href="#">Home</a></li>
 		<li role="presentation"><a href="#">Profile</a></li>
-		<li role="presentation"><a href="#">Contact</a></li>
+		<li role="presentation"><a href="#">Messages</a></li>
 	</ul>
 	<div class="container">
 		<div class="row">
