--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<ul class="nav nav-tabs">
 		<li role="presentation" class="active"><a href="#">Home</a></li>
-		<li role="presentation"><a href="#">Profile</a></li>
+		<li role="presentation"><a href="http://google.com">Profile</a></li>
 		<li role="presentation"><a href="#">Contact</a></li>
 	</ul>
 	<div class="container">
@@ -17,7 +17,7 @@
 			<div class="col-md-12">
 				<div class="jumbotron text-center">
 					<h1>Avantika Phaltankar</h1>
-					<p><a class="btn btn-danger btn-lg" href="mailto:avantikap@hotmail.co.uk" role="button">CONTACT NOW</a></p>
+					<p><a class="btn btn-info btn-lg" href="mailto:avantikap@hotmail.co.uk" role="button">CONTACT NOW</a></p>
 				</div>
 			</div>		
 		</div>
@@ -49,7 +49,7 @@
 					<h2> This is a further section</h2>
 					<p> psum dolor sit amet, duo putant mentitum rationibus ex, nam dicam causae ex. Nec cu utamur meliore vivendo, est mnesarchum honestatis scriptorem ea. Euripidis repudiandae sea eu. Alia delenit ex has, ea qui nihil qualisque. Pri no detracto mnesarchum. Ea est tale prompta salutatus, quot utinam gubergren cu nec.psum dolor sit amet, duo putant mentitum rationibus ex, nam dicam causae ex. Nec cu utamur meliore vivendo, est mnesarchum honestatis scriptorem ea. Euripidis repudiandae sea eu. Alia delenit ex has, ea qui nihil qualisque. Pri no detracto mnesarchum. Ea est tale prompta salutatus, quot utinam gubergren cu nec.</p>
 				</div>
-			</div>
+			</div>	
 			<div class="col-md-4">
 				<div class="thumbnail">
 					<img src="http://images1.laweekly.com/imager/whose-silicon-beach-is-it-san-diego-used/u/original/4240899/ventura_beach_sun_sunset_law_flickr_a_.jpg">
@@ -62,14 +62,9 @@
 			</div>
 		</div>
 		
-		
 
 
 
-
-
-
-
-</div>
+	</div>
 </body>
 </html>
