--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<ul class="nav nav-tabs">
 		<li role="presentation" class="active"><a href="#">Home</a></li>
 		<li role="presentation"><a href="http://google.com">Profile</a></li>
-		<li role="presentation"><a href="#">Contact</a></li>
+		<li role="presentation"><a href="contact.html">Contact</a></li>
 	</ul>
 	<div class="container">
 		<div class="row">
