--- a/index2.html
+++ b/index2.html
@@ -25,7 +25,7 @@
 		<div class="row">
 			<div class="col-md-4">
 				<div class="page-header">
-					<h2> A bit about me </h2>
+					<h2> This is a section </h2>
 					<p> This is a small section about me and what I like, what I am interested in, followed by some latin- psum dolor sit amet, duo putant mentitum rationibus ex, nam dicam causae ex. Nec cu utamur meliore vivendo, est mnesarchum honestatis scriptorem ea. Euripidis repudiandae sea eu. Alia delenit ex has, ea qui nihil qualisque. Pri no detracto mnesarchum. Ea est tale prompta salutatus, quot utinam gubergren cu nec.</p>
 				</div>
 			</div>	
