--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 		<div class="row">
 			<div class="jumbotron text-center">
 				<h1>Contact details</h1>
-				<p> 3 Haddon Road, Manchester</p>
+				<p> c cu utamur meliore vivendo, est mnesarchum honestatis scriptorem ea. Euripidis repudiandae sea eu. Alia delenit</p>
 			</div>
 		
 
