--- a/index2.html
+++ b/index2.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>My website</title>
+	<title>Welcome to the site</title>
 	<link rel="stylesheet" type="text/css"
 	href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css"
